--- a/publican-redhat-db5/bn-IN/Feedback.po
+++ b/publican-redhat-db5/bn-IN/Feedback.po
@@ -31,8 +31,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>সহায়তা</primary> <secondary>সহায়তা প্রাপ্তির উপায়</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+#, no-c-format, fuzzy
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
 msgstr "এই নথির মধ্যে উল্লিখিত পদ্ধতি ব্যবহার করতে সমস্যা দেখা দিলে, <ulink url=\"http://access.redhat.com\" />-এ উপস্থিত Red Hat Customer Portal পরিদর্শন করুন। এই পোর্ট্যালের মাধ্যমে আপনি নিম্নলিখিত সাহায্য প্রাপ্ত করতে পারবেন:"
 
 #. Tag: para
@@ -51,8 +51,8 @@ msgid "access other product documentation."
 msgstr "উৎপাদন সম্বন্ধীয় অন্যান্য নথিপত্র পরিদর্শন।"
 
 #. Tag: para
-#, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format, fuzzy
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat-র সফ্টওয়্যার ও প্রযুক্তিবিষয়ক আলোচনার জন্য Red Hat দ্বারা অনেকগুলি ই-মেইল লিস্ট উপস্থাপন করা হয়। সার্বজনীন রূপে উপলব্ধ ই-মেইল লিস্টের সম্পূর্ণ তালিকা <ulink url=\"https://www.redhat.com/mailman/listinfo\" />-এ উপস্থিত রয়েছে। কোনো লিস্টে সাবস্ক্রাইব করার জন্য অথবা পূর্ববর্তী আলোচনা দেখার জন্য সংশ্লিষ্ট লিস্টের তালিকার মধ্যে ক্লিক করুন।"
 
 #. Tag: title
@@ -66,8 +66,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>মতামত</primary> <secondary>এই নথি সম্বন্ধে যোগাযোগের তথ্য</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#, no-c-format, fuzzy
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
 msgstr "যদি আপনি কোনো ত্রুটি লক্ষ্য করেন অথবা এই পুস্তিকাটি আরো উন্নত করার কোনো প্রস্তাব আপনি দিতে ইচ্ছুক থাকলে, আমাদের নির্দ্বিধায় তা জানান।! অনুগ্রহ করে <application>&PRODUCT;.</application> উৎপাদনের জন্য Bugzilla-তে সমস্ত বিবরণসহ একটি রিপোর্ট দায়ের করুন: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>।"
 
 #. Tag: para
