--- a/publican-redhat-db5/ja-JP/Feedback.po
+++ b/publican-redhat-db5/ja-JP/Feedback.po
@@ -33,8 +33,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>ヘルプ</primary> <secondary>ヘルプを得る</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+#, no-c-format, fuzzy
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
 msgstr "本文に説明してある手順で問題に遭遇した場合は、Red Hat カスタマーポータル(<ulink url=\"http://access.redhat.com\" />)をご覧ください。カスタマーポータルでは以下を行うことができます。"
 
 #. Tag: para
@@ -53,8 +53,8 @@ msgid "access other product documentation."
 msgstr "他の製品ドキュメントを参照することができます。"
 
 #. Tag: para
-#, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format, fuzzy
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "また、Red Hat は Red Hat のソフトウェアやテクノロジーに関するディスカッションの場として多くのメーリングリストをホストしています。公開されているメーリングリストについては<ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>で一覧を参照してください。メーリングリストをサブスクライブする、またはメーリングリストのアーカイブを参照する場合はそのメーリングリスト名をクリックします。"
 
 #. Tag: title
@@ -68,8 +68,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>フィードバック</primary> <secondary>本文に関する連絡先情報</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#, no-c-format, fuzzy
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
 msgstr "本文に誤植を見つけられた場合や本文に関する改善案をお持ちの場合はぜひお知らせください。Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>)にて、該当する製品<application>&PRODUCT;.</application>に対しバグ報告をお願いいたします。"
 
 #. Tag: para
