--- a/publican-redhat-db5/pot/Feedback.pot
+++ b/publican-redhat-db5/pot/Feedback.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2012-07-12T06:18:54\n"
-"PO-Revision-Date: 2012-07-12T06:18:54\n"
+"POT-Creation-Date: 2013-08-08 13:33-0400\n"
+"PO-Revision-Date: 2013-08-08 13:33-0400\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
 msgstr ""
 
 #. Tag: para
@@ -49,7 +49,7 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr ""
 
 #. Tag: title
@@ -64,7 +64,7 @@ msgstr ""
 
 #. Tag: para
 #, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
 msgstr ""
 
 #. Tag: para
