--- a/publican-redhat-db5/te-IN/Feedback.po
+++ b/publican-redhat-db5/te-IN/Feedback.po
@@ -33,8 +33,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>సహాయం</primary> <secondary>సహాయం పొందుట</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+#, no-c-format, fuzzy
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
 msgstr "ఈ పత్రికీకరణ నందు వివరించిన విధానమునందు మీరు సంక్లిష్టతను యెదుర్కొంటే, Red Hat వినియోగదారి పోర్టల్‌ను <ulink url=\"http://access.redhat.com\" /> వద్ద దర్శించండి. వినియోగదారి పోర్టల్ ద్వారా మీరు యివి చేయవచ్చును:"
 
 #. Tag: para
@@ -53,8 +53,8 @@ msgid "access other product documentation."
 msgstr "ఇతర వుత్పత్తి పత్రికీకరణను యాక్సెస్ చేయవచ్చును."
 
 #. Tag: para
-#, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format, fuzzy
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat సాఫ్టువేర్ మరియు సాంకేతికతను చర్చించుట కొరకై Red Hat యెక్కువ సంఖ్యలో యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్ వుంచును. పబ్లిక్‌గా అందుబాటులో వున్న జాబితా(లిస్ట్)లను మీరు <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> వద్ద కనుగొనగలరు. జాబితానందు జేరుటకు లేదా జాబితా యొక్క అర్చీవ్‌లను యాక్సెస్ చేయుటకు జాబితా యొక్క నామముపై నొక్కుము."
 
 #. Tag: title
@@ -68,8 +68,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>స్పందన</primary> <secondary>ఈ మాన్యువల్ వుద్దేశించి సంప్రదించుటకు సమాచారము</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#, no-c-format, fuzzy
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
 msgstr "మీరు ఈ చేతి పుస్తకం నందు టైపోగ్రాఫికల్ దోషాన్ని గాని, లేదా మీరు ఈ చేతిపుస్తకం ను ఇంకా బాగా తయారుచేసే మార్గం ఆలోచించిన, మీరు చెప్పింది వినుటకు మేము ఇష్టపడతాము.దయచేసి నివేదికను Bugzilla లో ఉంచండి: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>ఉత్పత్తి కి విరుద్దంగా<application>&PRODUCT;.</application>"
 
 #. Tag: para
