--- a/publican-redhat-db5/zh-CN/Feedback.po
+++ b/publican-redhat-db5/zh-CN/Feedback.po
@@ -32,8 +32,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>帮助</primary> <secondary>获得帮助</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+#, no-c-format, fuzzy
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
 msgstr "如果您对本文档论述的步骤有疑问，请访问红帽客户门户网站 <ulink url=\"http://access.redhat.com\" />。通过客户门户网站，您可以："
 
 #. Tag: para
@@ -52,8 +52,8 @@ msgid "access other product documentation."
 msgstr "访问其它红帽文档。"
 
 #. Tag: para
-#, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format, fuzzy
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "红帽还托管了大量讨论红帽软件和技术的电子邮件列表。公开列表位于 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>。点击任意列表名称即可订阅该列表或者访问列表归档。"
 
 #. Tag: title
@@ -67,8 +67,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>反馈</primary> <secondary>本手册的联络信息</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#, no-c-format, fuzzy
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
 msgstr "如​果​您​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​您​的​意​见​。​请​在 Bugzilla <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> 中​根据产品 <application>&PRODUCT;.</application> 提交​报​告​。​"
 
 #. Tag: para
