--- a/publican-redhat-db5/zh-TW/Feedback.po
+++ b/publican-redhat-db5/zh-TW/Feedback.po
@@ -31,8 +31,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>說明</primary> <secondary>取得協助</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
+#, no-c-format, fuzzy
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
 msgstr "如果您無法進行本文件中所描述的步驟，請參閱 Red Hat Customer Portal 於 <ulink url=\"http://access.redhat.com\" />。您可透過此客戶端頻道來進行以下動作："
 
 #. Tag: para
@@ -51,8 +51,8 @@ msgid "access other product documentation."
 msgstr "存取其它產品的文件。"
 
 #. Tag: para
-#, no-c-format
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format, fuzzy
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat 擁有許多電子郵件清單，以討論 Red Hat 的軟體與技術。您可以藉由 <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> 找到公開的郵件清單。請按下郵件清單的名稱，以選擇訂閱或檢視過去的清單紀錄。"
 
 #. Tag: title
@@ -66,8 +66,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>意見</primary> <secondary>本指南的聯絡資訊</secondary>"
 
 #. Tag: para
-#, no-c-format
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
+#, no-c-format, fuzzy
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
 msgstr "若您在本指南中發現印刷上的錯誤，或有讓本指南改進的方式，我們將誠摯歡迎您和我們取得聯繫！請在 Bugzilla 中針對於 <application>&PRODUCT;.</application> 這個產品提交您的回報：<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>。"
 
 #. Tag: para
