Fix empty images dir causing packaging fail. BZ #996349

--- a/publican/README
+++ b/publican/README
@@ -180,3 +180,12 @@ what about a real list of valid langauges?
     sub valid_lang looks good
         http://cpansearch.perl.org/src/TOBYINK/XRD-Parser-0.101/lib/XRD/Parser.pm
 
+Release Process:
+
+git merge
+git tag
+...
+scp to hosted
+...
+
+
