--- a/publican/TODO
+++ b/publican/TODO
@@ -77,3 +77,20 @@ update_db
         $stro =~ s/\%(\d)+/\[_$1\]/g;
         $strt =~ s/\%(\d)+/\[_$1\]/g;
 
+
+
+GIT
+
+Chase up tig!
+branch rename
+generate Changes file from git log ... requires hygeine
+
+Release Process:
+
+git merge
+git tag
+...
+scp to hosted
+...
+
+
