--- a/publican-redhat-db5/gu-IN/Feedback.po
+++ b/publican-redhat-db5/gu-IN/Feedback.po
@@ -33,8 +33,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>મદદ</primary> <secondary>મદદ મળી રહી છે</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "જો તમને આ દસ્તાવેજીકરણમાં વર્ણવેલ પ્રક્રિયા સાથે મુશ્કેલી અનુભવો તો, <ulink url=\"http://access.redhat.com\" /> પર Red Hat કસ્ટમર પોર્ટલની મુલાકાત લો. કસ્ટમર પોર્ટલ મારફતે, તમે કરી શકો છો:"
 
 #. Tag: para
@@ -53,8 +53,8 @@ msgid "access other product documentation."
 msgstr "બીજા પ્રોડક્ટ દસ્તાવેજીકરણમા પ્રવેશ કરો."
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat સોફ્ટવેર અને ટૅકનોલોજીની ચર્ચા માટે ઇલેક્ટ્રોનિક મેઇલિંગ યાદીઓની વિશાળ સંખ્યાને યજમાનિત કરે છે. તમે <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> પર સાર્વજનિક ઉપલબ્ધ યાદીઓની યાદીને શોધી શકો છો. તે યાદીનું ઉમેદવારી કરવા માટે અથવા જૂની યાદીમાં પ્રવેશ કરવા માટે કોઇપણ યાદીનાં નામ પર ક્લિક કરો."
 
 #. Tag: title
@@ -68,8 +68,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>ફીડબૅક</primary> <secondary>આ પુસ્તિકા માટે જાણકારીનો સંપર્ક કરો</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "જો તમને આ માર્ગદર્શિકામાં લખાણને લગતી ભૂલ મળે, કે જો તમે આ માર્ગદર્શિકાને વધુ સારી બનાવવાનો વિચાર આવે, તો અમને તમારા તરફથી સાંભળવામાં ખુશી થશે! મહેરબાની કરીને બગઝીલ્લામાં અહેવાલ જમા કરો: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> આગળ <application>&PRODUCT;.</application> ઉત્પાદન વિરુદ્ધ"
 
 #. Tag: para
