--- a/publican-redhat-db5/ml-IN/Feedback.po
+++ b/publican-redhat-db5/ml-IN/Feedback.po
@@ -30,8 +30,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr ""
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "ഈ വിവരണക്കുറിപ്പില്‍ വിശദീകരിക്കുന്ന പ്രക്രിയകള്‍ മനസ്സിലാക്കുന്നതില്‍ നിങ്ങള്‍ക്കു് എന്തെങ്കിലും ബുദ്ധിമുട്ടുണ്ടെങ്കില്‍, നിങ്ങള്‍ക്കു് സഹായങ്ങള്‍ ഇങ്ങനെ ലഭ്യമാക്കാം:"
 
 #. Tag: para
@@ -50,8 +50,8 @@ msgid "access other product documentation."
 msgstr "മറ്റു് Red Hat വിവരണക്കുറിപ്പുകള്‍"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat സോഫ്റ്റ്‌വെയറും സാങ്കേതിക വിവരങ്ങളെപ്പറ്റിയും ചര്‍ച്ച ചെയ്യുന്നതിനായി Red Hat അനേകം മെയിലിങ് ലിസ്റ്റുകള്‍ ലഭ്യമാക്കുന്നു. അത്തരത്തിലുള്ള പബ്ലിക് മെയിലിങ് ലിസ്റ്റുകള്‍ ഇവിടെ ലഭിക്കുന്നു: <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>.ഒരു ലിസ്റ്റില്‍ അംഗമാകുന്നതിനായി അല്ലെങ്കില്‍ അതിലുള്ള ആര്‍ക്കൈവുകള്‍ക്കായി ആ ലിസ്റ്റില്‍ ക്ലിക്ക് ചെയ്യുക."
 
 #. Tag: title
@@ -65,8 +65,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>അഭിപ്രായം</primary> <secondary>ഈ മാനുവലുമായി ബന്ധപ്പെടുവാനുള്ള വിലാസം</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "നിങ്ങള്‍ക്ക് ഈ മാനുവലിലുള്ള പിശകുകള്‍ ഞങ്ങളെ അറിയിക്കണമെങ്കില്‍, അല്ലെങ്കില്‍ ഇതു് കൂടുതല്‍ മെച്ചപ്പെടുത്തുന്നതിനുള്ള നിര്‍ദ്ദേശങ്ങളും അഭിപ്രായങ്ങളും ഞങ്ങളെ അറിയിക്കുന്നതിനായി ദയവായി ബഗ്സിലായില്‍ <application>&PRODUCT;. </application> എന്ന പ്രൊഡക്ടിനെതിരെ ഒരു റിപോര്‍ട്ട് രേഖപ്പെടുത്തുക: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>."
 
 #. Tag: para
