--- a/publican-redhat-db5/mr-IN/Feedback.po
+++ b/publican-redhat-db5/mr-IN/Feedback.po
@@ -32,8 +32,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>मदत</primary> <secondary>मदत प्राप्ति</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "या दस्तऐवजातील वर्णनीकृत पद्धतीसह अडचण आढळल्यास, Red Hat ग्राहक पोर्टल <ulink url=\"http://access.redhat.com\" /> येथे भेट द्या. ग्राहक पोर्टलद्वारे, तुम्ही खालील करू शकता:"
 
 #. Tag: para
@@ -52,8 +52,8 @@ msgid "access other product documentation."
 msgstr "इतर उत्पादन दस्तऐवजीकरणकरीता प्रवेश."
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat सॉफ्टवेअर व तंत्रज्ञाणविषयी चर्चाकरीता Red Hat अनेक इलेक्ट्रॉनीक मेलिंग लिस्टस् आयोजीत करतो. <ulink url=\"https://www.redhat.com/mailman/listinfo\"/> येथे तुम्हाला पब्लिक लिस्टस् आढळतील. ठराविक लिस्टकरीता सबस्क्राइब होण्यासाठी किंवा लिस्ट आर्काइव्हस् च्या प्रवेशसाठी लिस्ट नावावर क्लिक करा."
 
 #. Tag: title
@@ -67,8 +67,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>प्रतिसाद</primary> <secondary>या नियमावली संपर्क माहिती</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "या नियमावलीत टायपोग्राफि संबंधित त्रुटी आढळल्यास, किंवा नियमावलीला अधिक उत्तम बनवायचे विचार असल्यास, आम्हाला ते जरूर कळवा! कृपया Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> येथे उत्पादन <application>&PRODUCT;.</application> विरूद्ध अहवाल पाठवा"
 
 #. Tag: para
