--- a/publican-redhat-db5/pot/Program_Listing.pot
+++ b/publican-redhat-db5/pot/Program_Listing.pot
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2013-08-08 13:33-0400\n"
-"PO-Revision-Date: 2013-08-08 13:33-0400\n"
+"POT-Creation-Date: 2013-01-10T21:02:33\n"
+"PO-Revision-Date: 2013-01-10T21:02:33\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: None\n"
 "MIME-Version: 1.0\n"
@@ -14,31 +14,24 @@ msgstr ""
 
 #. Tag: programlisting
 #, no-c-format
-msgid "static int kvm_vm_ioctl_deassign_device(struct kvm *kvm,\n"
-"                 struct kvm_assigned_pci_dev *assigned_dev)\n"
+msgid "package org.jboss.book.jca.ex1;\n"
+"\n"
+"import javax.naming.InitialContext;\n"
+"\n"
+"public class ExClient\n"
 "{\n"
-"         int r = 0;\n"
-"         struct kvm_assigned_dev_kernel *match;\n"
+"   public static void main(String args[]) \n"
+"       throws Exception\n"
+"   {\n"
+"      InitialContext iniCtx = new InitialContext();\n"
+"      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
+"      EchoHome       home   = (EchoHome) ref;\n"
+"      Echo           echo   = home.create();\n"
 "\n"
-"         mutex_lock(&amp;kvm-&gt;lock);\n"
+"      System.out.println(\"Created Echo\");\n"
 "\n"
-"         match = kvm_find_assigned_dev(&amp;kvm-&gt;arch.assigned_dev_head,\n"
-"                                       assigned_dev-&gt;assigned_dev_id);\n"
-"         if (!match) {\n"
-"                 printk(KERN_INFO \"%s: device hasn't been assigned before, \"\n"
-"                   \"so cannot be deassigned\n"
-"\", __func__);\n"
-"                 r = -EINVAL;\n"
-"                 goto out;\n"
-"         }\n"
-"\n"
-"         kvm_deassign_device(kvm, match);\n"
-"\n"
-"         kvm_free_assigned_device(kvm, match);\n"
-"\n"
-"out:\n"
-"         mutex_unlock(&amp;kvm-&gt;lock);\n"
-"         return r;\n"
+"      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello\"));\n"
+"   }\n"
 "}"
 msgstr ""
 
