--- a/publican-redhat-db5/fr-FR/Feedback.po
+++ b/publican-redhat-db5/fr-FR/Feedback.po
@@ -31,8 +31,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>aide</primary> <secondary>obtenir de l'aide</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "Si vous rencontrez des difficultés avec l'une des procédures décrites dans cette documentation, veuillez visiter le Portail Client Red Hat sur <ulink url=\"http://access.redhat.com\" />. Sur le portail client, vous pourrez :"
 
 #. Tag: para
@@ -51,8 +51,8 @@ msgid "access other product documentation."
 msgstr "accéder aux documents des autres produits de Red Hat."
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat est l'hôte de nombreuses listes de diffusion traitant de ses logiciels et technologies. Vous trouverez un ensemble des listes de diffusion disponibles au public sur <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Cliquez sur le nom d'une liste pour vous inscrire à celle-ci ou pour accéder à ses archives."
 
 #. Tag: title
@@ -66,8 +66,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>feedback</primary> <secondary>informations de contact de ce manuel</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "Si vous trouvez des fautes de frappe ou si vous avez des suggestions pour améliorer ce manuel, n'hésitez surtout pas à nous en faire part&nbsp;! Veuillez envoyer vos remarques par l'entremise de Bugzilla (<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>) pour le produit <application>&PRODUCT;.</application>"
 
 #. Tag: para
