--- a/publican-redhat-db5/hi-IN/Feedback.po
+++ b/publican-redhat-db5/hi-IN/Feedback.po
@@ -35,8 +35,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>मदद</primary> <secondary>मदद लें</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "यदि आप इस दस्तावेज़ीकरण में वर्णित किसी प्रक्रिया से कोई परेशानी अनुभव करते हैं, तो Red Hat ग्राहक पोर्टल को <ulink url=\"http://access.redhat.com\" /> पर देखें. ग्राहक पोर्टल से होकर आप कर सकते हैं:"
 
 #. Tag: para
@@ -55,8 +55,8 @@ msgid "access other product documentation."
 msgstr "अन्य उत्पाद दस्तावेज़ीकरण की पहुँच लें."
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat कई इलेक्ट्रॉनिक मेलिंग सूची को Red Hat सॉफ़्टवेयर और प्रौद्योगिकी की चर्चा के लिए होस्ट करती है. आप सार्वजनिक रूप से उपलब्ध सूची को <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> पर पा सकते हैं. सूची की सदस्यता लेने या सूची अभिलेख की पहुँच के लिए किसी सूची के नाम पर क्लिक करें."
 
 #. Tag: title
@@ -70,8 +70,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>फ़ीडबैक</primary> <secondary>इस मैनुअल के लिए संपर्क सूचना</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "यदि आप इस मैनुअल में टाइप की कोई गलती पाते हैं, या आपने इस मैनुअल को बेहतर बनाने का कोई तरीका सोचा है, हम आपकी राय जानना चाहेंगे! कृपया बगजिला में एक रिपोर्ट दर्ज करें: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> <application>&PRODUCT;.</application> उत्पाद के लिए."
 
 #. Tag: para
