--- a/publican-redhat-db5/pa-IN/Feedback.po
+++ b/publican-redhat-db5/pa-IN/Feedback.po
@@ -31,8 +31,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>ਮਦਦ</primary> <secondary>ਮਦਦ ਲੈਣੀ</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ ਵਿੱਚ ਦਿੱਤੇ ਮੁਤਾਬਕ ਮੁਸ਼ਕਿਲ ਸਮਝਦੇ ਹੋ, ਤਾਂ Red Hat ਗਾਹਕ ਪੋਰਟਲ <ulink url=\"http://access.redhat.com\" /> ਉੱਪਰ ਵੇਖੋ। ਗਾਹਕ ਪੋਰਟਲ ਰਾਹੀਂ, ਤੁਸੀਂ ਇਹ ਕਰ ਸਕਦੇ ਹੋ:"
 
 #. Tag: para
@@ -51,8 +51,8 @@ msgid "access other product documentation."
 msgstr "ਹੋਰ ਉਤਪਾਦ ਦਸਤਾਵੇਜ ਵੇਖੋ।"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Red Hat ਬਹੁਤ ਸਾਰੀਆਂ ਮੇਲਿੰਗ ਲਿਸਟਾਂ ਵੀ ਹੋਸਟ ਕਰਦਾ ਹੈ ਜਿਨਾਂ ਉੱਪਰ Red Hat ਸਾਫਟਵੇਅਰ ਅਤੇ ਟੈਕਨਾਲੋਜੀ ਬਾਰੇ ਗੱਲਬਾਤ ਹੁੰਦੀ ਹੈ। ਤੁਸੀਂ ਪਬਲਿਕ ਤੌਰ ਤੇ ਉਪਲੱਬਧ ਲਿਸਟ <ulink url=\"https://www.redhat.com/mailman/listinfo\" /> ਉੱਪਰ ਲੱਭ ਸਕਦੇ ਹੋ। ਲਿਸਟ ਤੇ ਮੈਂਬਰ ਬਣਨ ਲਈ ਜਾਂ ਲਿਸਟ ਆਰਚੀਵ ਵੇਖਣ ਲਈ ਮੇਲਿੰਗ ਲਿਸਟ ਦੇ ਨਾਂ ਤੇ ਕਲਿੱਕ ਕਰੋ।"
 
 #. Tag: title
@@ -66,8 +66,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>ਸੁਝਾਅ</primary> <secondary>ਇਸ ਦਸਤਾਵੇਜ ਲਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਟਾਈਪੋਗਰਾਫੀਕਲ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਜਾਂ ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਵਧੀਆਂ ਬਣਾ ਸਕਦੇ ਹੋ, ਤਾਂ ਅਸੀਂ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੀ ਕਦਰ ਕਰਦੇ ਹਾਂ! ਕਿਰਪਾ ਕਰਕੇ ਬੱਗਜ਼ੀਲਾ ਵਿੱਚ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰੋ: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 
 #. Tag: para
