--- a/publican-redhat-db5/ru-RU/Feedback.po
+++ b/publican-redhat-db5/ru-RU/Feedback.po
@@ -34,8 +34,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr "<primary>помощь</primary> <secondary>получение помощи</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr "Если вы столкнулись с проблемами при выполнении инструкций, описанных в этом документе, помощь можно получить через портал пользователей Red Hat (<ulink url=\"http://access.redhat.com\" />). Там вы сможете:"
 
 #. Tag: para
@@ -54,8 +54,8 @@ msgid "access other product documentation."
 msgstr "получить доступ к другой официальной документации."
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr "Существует множество почтовых рассылок Red Hat на разные темы, включая программное обеспечение и обсуждение технологий. Полный список можно найти по адресу <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Чтобы просмотреть информацию об интересующей рассылке и подписаться на нее, нажмите на ее названии."
 
 #. Tag: title
@@ -69,8 +69,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr "<primary>отзывы</primary> <secondary>контактная информация</secondary>"
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы хотели бы об этом узнать. Создайте запрос в Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</application>"
 
 #. Tag: para
