--- a/publican-redhat-db5/si-LK/Feedback.po
+++ b/publican-redhat-db5/si-LK/Feedback.po
@@ -31,8 +31,8 @@ msgid "<primary>help</primary> <secondary>getting help</secondary>"
 msgstr ""
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <uri xlink:href=\"http://access.redhat.com\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://access.redhat.com</uri>. Through the customer portal, you can:"
+#, no-c-format
+msgid "If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at <ulink url=\"http://access.redhat.com\" />. Through the customer portal, you can:"
 msgstr ""
 
 #. Tag: para
@@ -51,8 +51,8 @@ msgid "access other product documentation."
 msgstr ""
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <uri xlink:href=\"https://www.redhat.com/mailman/listinfo\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">https://www.redhat.com/mailman/listinfo</uri>. Click on the name of any mailing list to subscribe to that list or to access the list archives."
+#, no-c-format
+msgid "Red Hat also hosts a large number of electronic mailing lists for discussion of Red Hat software and technology. You can find a list of publicly available mailing lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\" />. Click on the name of any mailing list to subscribe to that list or to access the list archives."
 msgstr ""
 
 #. Tag: title
@@ -66,8 +66,8 @@ msgid "<primary>feedback</primary> <secondary>contact information for this manua
 msgstr ""
 
 #. Tag: para
-#, no-c-format, fuzzy
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <link xlink:href=\"http://bugzilla.redhat.com/\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">http://bugzilla.redhat.com/</link> against the product <application>&PRODUCT;.</application>"
+#, no-c-format
+msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product <application>&PRODUCT;.</application>"
 msgstr "මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස සැකසීමට අදහසක් ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: <application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>"
 
 #. Tag: para
