--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,4 @@
-3.2.1 UNRELEASED
+3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #996349
 - Fix draft background being in front. BZ #996361
 - Fix Titles that are ulinks are incorrectly positioned. BZ #995095
